fix(menu): 커피 메뉴 조회 시 Thumbnail Field 수정
MenuResponseDto에서 thumbnailUrl을 Return하도록 수정하였습니다.