@@ -1,5 +1,6 @@
 package easy.gc_coffee_api.usecase.menu;
 
+import easy.gc_coffee_api.dto.MenuResponseDto;
 import easy.gc_coffee_api.dto.MenusResponseDto;
 import easy.gc_coffee_api.entity.File;
 import easy.gc_coffee_api.entity.Menu;
@@ -17,7 +18,6 @@ import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -34,23 +34,32 @@ class GetMenusUseCaseTests {
 
     @Test
     @DisplayName("메뉴 리스트 조회")
-    void get_menus_test() throws Exception {
+    void get_menus_test() {
 
         // given
-        File thumbnail1 = new File("image/jpg", "/storage/78b6f135-afce-411f-8dec-01ed9969dd79.jpg");
-        List<Menu> fakeMenus = Arrays.asList(
-                new Menu("Americano", 3000, Category.COFFEE_BEAN, new Thumnail(new File("image/jpg", "/storage/78b6f00.jpg"))),
-                new Menu("Latte", 4000, Category.COFFEE_BEAN, new Thumnail(new File("image/jpg", "/storage/78b6f01.jpg")))
+        MenuResponseDto firstDto =  new MenuResponseDto("Americano", 3000, Category.COFFEE_BEAN, "/storage/001.jpeg");
+        MenuResponseDto secondDto = new MenuResponseDto("CafeLatte", 4000, Category.COFFEE_BEAN, null);
+        List<MenuResponseDto> fakeMenus = Arrays.asList(
+                firstDto,secondDto
         );
-        when(menuRepository.findAll()).thenReturn(fakeMenus);
+
+        when(menuRepository.findAllByMenuResponseDto()).thenReturn(fakeMenus);
+
         // when
         MenusResponseDto result = getMenusUseCase.getMenus();
 
         // then
-        assertThat(result.getMenus()).hasSize(2);
-        assertThat(result.getMenus().getFirst().getName()).isEqualTo("Americano");
-        assertThat(result.getMenus().get(1).getPrice()).isEqualTo(4000);
-//        assertThat(result.getMenus().get(0).getThumnail()).isEqualTo(1L);
-//        assertThat(result.getMenus().get(1).getThumnail()).isEqualTo(2L);
+        MenuResponseDto first = result.getMenus().getFirst();
+        assertThat(first.getName()).isEqualTo(firstDto.getName());
+        assertThat(first.getPrice()).isEqualTo(firstDto.getPrice());
+        assertThat(first.getCategory()).isEqualTo(firstDto.getCategory());
+        assertThat(first.getThumbnailUrl()).isEqualTo(firstDto.getThumbnailUrl());
+
+        MenuResponseDto second = result.getMenus().get(1);
+        assertThat(second.getName()).isEqualTo(secondDto.getName());
+        assertThat(second.getPrice()).isEqualTo(secondDto.getPrice());
+        assertThat(second.getCategory()).isEqualTo(secondDto.getCategory());
+        assertThat(second.getThumbnailUrl()).isNull();
+
     }
 }
